<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_intro" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_icu_title"
            android:layout_marginTop="16dp"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_icu"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_cookies_title"
            android:layout_marginTop="16dp"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_cookies"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_security_title"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/privacy_security"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_security"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_changes_title"
            android:layout_marginTop="16dp"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_changes"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_contact_title"
            android:layout_marginTop="16dp"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/privacy_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_contact"/>
    </LinearLayout>
</ScrollView>