<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/editeventlayout"
    tools:context=".EditEventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:background="#00aaaaaa"
                        android:layout_gravity="end"
                        android:layout_height="match_parent">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@color/colorPrimary"
                            android:src="@drawable/ic_delete"
                            android:paddingRight="@dimen/fab_margin"
                            android:onClick="deleteEvent"
                            android:contentDescription="@string/delete"
                            android:paddingEnd="@dimen/fab_margin" />

                    </LinearLayout>

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventname_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:imeOptions="actionNext" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventplace_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:imeOptions="actionNext" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/eventdate_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/date" />

                    <EditText
                        android:id="@+id/eventdate_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/date"
                        android:inputType="date"
                        android:gravity="center"
                        android:clickable="true"
                        android:focusable="false"
                        android:cursorVisible="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/time_optional"/>

                    <EditText
                        android:id="@+id/eventtime_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/emptytime"
                        android:inputType="time"
                        android:clickable="true"
                        android:focusable="false"
                        android:gravity="center"
                        android:cursorVisible="false" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/companions">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventpeople_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:imeOptions="actionNext" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventphone_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:imeOptions="actionDone" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/encounter_type" />

                <RadioGroup
                    android:id="@+id/event_indoor_outdoor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/event_indoors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/indoors" />

                    <RadioButton
                        android:id="@+id/event_outdoors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:text="@string/outdoors"
                        android:layout_marginStart="80dp" />
                </RadioGroup>

                <TextView
                    android:id="@+id/closecontact_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/close_event_question" />

                <RadioGroup
                    android:id="@+id/eventclosecontact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/closeevent_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/closeevent_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:text="@string/no"
                        android:layout_marginStart="80dp" />

                    <RadioButton
                        android:id="@+id/closeevent_maybe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:text="@string/unsure"
                        android:layout_marginStart="80dp" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/okButton_AddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_ok"
        tools:ignore="VectorDrawableCompat"
        android:layout_marginEnd="@dimen/fab_margin" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>